NetBSD Problem Report #46792

From bernd@arresum.veego.de  Sat Aug 11 21:09:55 2012
Return-Path: <bernd@arresum.veego.de>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 539C563B85F
	for <gnats-bugs@gnats.netbsd.org>; Sat, 11 Aug 2012 21:09:55 +0000 (UTC)
Message-Id: <20120811210614.9DEDC8AB65@arresum.veego.de>
Date: Sat, 11 Aug 2012 23:06:14 +0200 (CEST)
From: Bernd Ernesti <pr201202@veego.de>
Reply-To: Bernd Ernesti <pr201202@veego.de>
To: gnats-bugs@gnats.NetBSD.org
Subject: spdmem fails to find all slots
X-Send-Pr-Version: 3.95

>Number:         46792
>Category:       port-i386
>Synopsis:       spdmem fails to find all slots
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    port-i386-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Aug 11 21:10:06 +0000 2012
>Closed-Date:    Wed Jul 31 15:01:21 +0000 2013
>Last-Modified:  Wed Jul 31 15:01:21 +0000 2013
>Originator:     Bernd Ernesti
>Release:        NetBSD 6.0_BETA2
>Organization:
>Environment:
System: NetBSD 6.0_BETA2
Architecture: i386
Machine: i386
>Description:
	A kernel 5.99.7 from around 2009-03-07 found two DIMMs:

spdmem0 at iic0 addr 0x50
spdmem0: DDR2 SDRAM, data ECC, 1GB, 800MHz (PC2-6400)
spdmem0: 14 rows, 10 cols, 2 ranks, 4 banks/chip, 2.50ns cycle time
spdmem0: tAA-tRCD-tRP-tRAS: 5-5-5-16
spdmem0: voltage SSTL 1.8V, refresh time 7.8us (self-refreshing)
spdmem1 at iic0 addr 0x51
spdmem1: DDR2 SDRAM, data ECC, 1GB, 800MHz (PC2-6400)
spdmem1: 14 rows, 10 cols, 2 ranks, 4 banks/chip, 2.50ns cycle time
spdmem1: tAA-tRCD-tRP-tRAS: 5-5-5-16
spdmem1: voltage SSTL 1.8V, refresh time 7.8us (self-refreshing) 

	Something changed between 2009-03-07 (5.99.7) and 2009-04-05 (5.99.10)
	so from now on the kernel only finds just one DIMM.
	The spdmem0 at 0x50 will no longer be found.

	This is the output from NetBSD 6.0_BETA2:

piixpm0 at pci0 dev 20 function 0: ATI Technologies SB600/SB700/SB800 SMBus Controller (rev. 0x3a)
piixpm0: interrupting at SMI, polling
iic0 at piixpm0: I2C bus
spdmem0 at iic0 addr 0x51
spdmem0: DDR2 SDRAM, data ECC, 1GB, 800MHz (PC2-6400)
spdmem0: 14 rows, 10 cols, 2 ranks, 4 banks/chip, 2.50ns cycle time
spdmem0: tAA-tRCD-tRP-tRAS: 5-5-5-16
spdmem0: voltage SSTL 1.8V, refresh time 7.8us (self-refreshing)

	Btw, this issue it not BIOS related because I successfully booted a
	5.1_STABLE earlier this year which showed both DIMMs.

>How-To-Repeat:
	Add the following lines to your kernel config and boot that
	kernel on a Asus m3a78 board
	 spdmem* at iic? addr 0x50
	 spdmem* at iic? addr 0x51

>Fix:

>Release-Note:

>Audit-Trail:
From: "Soren S. Jorvang" <soren@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46792 CVS commit: src/sys/dev/pci
Date: Thu, 18 Jul 2013 22:14:54 +0000

 Module Name:	src
 Committed By:	soren
 Date:		Thu Jul 18 22:14:54 UTC 2013

 Modified Files:
 	src/sys/dev/pci: ichsmb.c piixpm.c

 Log Message:
 Clear errors before beginning a transfer.

 Closes PR port-i386/46792.


 To generate a diff of this commit:
 cvs rdiff -u -r1.31 -r1.32 src/sys/dev/pci/ichsmb.c
 cvs rdiff -u -r1.40 -r1.41 src/sys/dev/pci/piixpm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: soren@NetBSD.org
State-Changed-When: Wed, 31 Jul 2013 15:01:21 +0000
State-Changed-Why:


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.