Clear errors before beginning a transfer.

Closes PR port-i386/46792.